# docai

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pdf-training-hf.py  pdf-training-local-model.py  pdf_viewer_app.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  pypi.yml  release.yml
docai_toolkit/: __init__.py  config.py  hf_client.py
docai_toolkit/ocr/: __init__.py  clients.py  pipeline.py
docai_toolkit/rag/: __init__.py  chat.py  index.py
tests/: conftest.py  test_pdf_viewer_app.py  test_remote_clients.py
